feat: support debounce

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rax-swipex",
-  "version": "0.0.1-beta4",
+  "version": "0.0.1-beta6",
   "description": "h5 mobile swiper, support horizontal and vertical mode",
   "author": "jingyu.zj",
   "main": "lib/index.js",
@@ -32,7 +32,7 @@
     "lodash.isequal": "^4.5.0",
     "rax-text": "^1.0.0",
     "rax-view": "^1.0.0",
-    "swipex": "^0.0.1-beta1"
+    "swipex": "0.0.1-beta3"
   },
   "devDependencies": {
     "@alib/build-scripts": "^0.1.0",
